<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateInk"
    android:background="@color/Secondary">

  <LinearLayout
      android:id="@+id/linearLayout_ink"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/gradient_bg"
      android:orientation="vertical"
      app:layout_constraintStart_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/title_ink"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

  </LinearLayout>


  <RadioGroup
      android:id="@+id/rg_ink"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:gravity="center_horizontal"
      android:orientation="horizontal"


      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout_ink"
      app:layout_constraintVertical_bias="0.207">

    <RadioButton
        android:id="@+id/rb_ink_09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ink_09"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/rb_ink_3_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ink_3_6"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/rb_ink_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ink_18"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/rb_ink_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ink_20"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

  </RadioGroup>

  <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_type_fink"
      android:textColor="@color/white"
      android:textSize="18sp"
      android:textStyle="bold"
      android:textAlignment="center"
      app:layout_constraintBottom_toTopOf="@+id/rg_ink"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout_ink" />



  <TextView
      android:id="@+id/tv_calc_final"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      tools:text="Você precisará desta quantidade de tinta"
      android:textColor="@color/white"
      android:textSize="24sp"
      android:textStyle="bold"
      android:layout_margin="12dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rg_ink"
      app:layout_constraintVertical_bias="0.344" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/btn_guide_line_center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.5" />

  <Button
      android:id="@+id/btn_calc_ink"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:layout_marginBottom="60dp"
      android:text="@string/btn_calculate_ink"
      android:textColor="@color/white"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintEnd_toStartOf="@id/btn_guide_line_center"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_calc_final"
      app:layout_constraintVertical_bias="0.806" />

  <Button
      android:id="@+id/btn_finish_ink"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:layout_marginBottom="60dp"
      android:text="@string/btn_finish_ink"
      android:backgroundTint="@color/black"
      android:textColor="@color/white"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/btn_guide_line_center"
      app:layout_constraintTop_toBottomOf="@+id/tv_calc_final"
      app:layout_constraintVertical_bias="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>