<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Floor"
    android:background="@color/Secondary">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_bg"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/title_floor"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_piece_width"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_piece_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_bg"
            android:hint="@string/text_width_piece"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="19sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_piece_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_piece_width">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_piece_length"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_length_piece"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:background="@drawable/gradient_bg"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_floor_width"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_piece_length">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_floor_width"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_floor_width"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:background="@drawable/gradient_bg"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_floor_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_floor_width">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_floor_length"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_length_floor"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:background="@drawable/gradient_bg" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_floor_length"
        tools:text="Resultado:" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btn_guide_line_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btn_recalculate_floor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_recalculate_floor"
        android:textColor="@color/Primary"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_guide_line_center"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResult"
        app:layout_constraintVertical_bias="0.551" />

    <Button
        android:id="@+id/btn_finish_floor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:backgroundTint="@color/black"
        android:text="@string/btn_finish_floor"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/btn_guide_line_center"
        app:layout_constraintTop_toBottomOf="@+id/textResult"
        app:layout_constraintVertical_bias="0.542" />

    <Button
        android:id="@+id/btn_calculate_floor"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Primary"
        android:text="@string/btn_calculate_floor"
        android:textSize="17dp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/textResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_floor_length" />

</androidx.constraintlayout.widget.ConstraintLayout>

